--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node out/index.js",
     "setup": "node src/setup.js"
   },
   "dependencies": {
